@@ -6,6 +6,7 @@ loading "Loading..."
 
 badPropertiesSignature "Bad properties signature in"
 badReachSignature      "Bad tool reach signature in"
+badTransitionSignature      "Bad transition signature in"
 
 
 
